--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-markdown": "^9.0.1"
+    "react-markdown": "^9.0.1",
+    "sass": "^1.82.0"
   },
   "devDependencies": {
     "@types/node": "^20",
